# Terrova

./: .gitignore  ARCHITECTURE.md  DOCS_INDEX.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  a.py  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy.yml
GeoProof/: ARCHITECTURE.md  BUILD_COMPLETE.md  CONTRIBUTING.md  DOCS_INDEX.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
GeoProof/app/: globals.css  layout.tsx  page.tsx
GeoProof/components/: error-boundary.tsx
GeoProof/contracts/: Anchor.toml
GeoProof/docs/: README.md  quickstart.md
GeoProof/hooks/: useGeoProof.ts
GeoProof/lib/: blockchain-context.tsx
Terrova/: .gitignore  BUILD_COMPLETE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
Terrova/app/: layout.tsx  page.tsx
Terrova/contracts/: Anchor.toml  package-lock.json  package.json
Terrova/contracts/programs/terrova/: Cargo.toml
Terrova/contracts/programs/terrova/src/: lib.rs
Terrova/docs/: BRAND_CI.md  README.md
Terrova/hooks/: useTerrova.ts
Terrova/lib/: blockchain-context.tsx
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
components/: loading-state.tsx
components/dashboard/: header.tsx  network-map.tsx  sidebar.tsx
contracts/: Anchor.toml  package.json  pnpm-lock.yaml
docs/: SUMMARY.md  quickstart.md
hooks/: useTerrova.ts  useTerrovaWallet.ts
lib/: blockchain-context.tsx
output/: geoproof-business-plan.html  geoproof-business-plan.md
(+65 files in other folders)
