[package]
name = "terrova"
version = "0.1.0"
description = "Terrova - Decentralized Agricultural Insurance Verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "terrova"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
